[tool.poetry]
name = "scrap-weather"
version = "0.1.0"
description = ""
authors = ["Jonatas Leon <j@jonatasleon.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.2"
fastapi = "^0.95.0"
boto3 = "^1.26.112"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
